--- a/.preprocessors/.less/global-mixins.less
+++ b/.preprocessors/.less/global-mixins.less
@@ -17,13 +17,22 @@
 @last-news-item-marg: 30px;
 
 @timescale-color: #183153;
-@large-resolution: 1024px;
+@large-resolution: 1255px;
 @add1-resolution: 1500px;
-@small-resolution: 768px;
+@middle-resolution: 980px;
+@small-resolution: 730px;
+@micro-resolution: 430px;
 
 @l-res: ~"(min-width: @{large-resolution})";
-@m-res: ~"(max-width: "(@large-resolution - 1)~") and (min-width: @{small-resolution})";
+@m-res: ~"(max-width: @{large-resolution}) and (min-width: @{middle-resolution})";
+@mm-res: ~"(max-width: @{middle-resolution}) and (min-width: @{small-resolution})";
+@s-res: ~"(max-width: @{small-resolution}) and (min-width: @{micro-resolution})";
+@ss-res: ~"(max-width: @{micro-resolution})";
+/*
+@m-res: ~"(max-width: "(@large-resolution - 1)~") and (min-width: @{middle-resolution})";
+@mm-res: ~"(max-width: "(@middle-resolution - 1)~") and (min-width: @{small-resolution})";
 @s-res: ~"(max-width: "(@small-resolution - 1)~")";
+*/
 
 @add1-res: ~"(min-width: @{add1-resolution})";
 
