--- a/.preprocessors/.less/css/elf.less
+++ b/.preprocessors/.less/css/elf.less
@@ -78,6 +78,46 @@ a {
 		color:#777;
 	}
 }
+#elf-debug-info {
+	display: block;
+	z-index: 1000;
+	position: fixed;
+	left: 5px;
+	top: 5px;
+	padding: 1em;
+	background-color: #fff;
+	color: #800;
+	text-align: center;
+	border: 2px solid #800;
+	transition: opacity .5s;
+	&:hover {
+		opacity: .2;
+	}
+}
+#elf-scroll-top-btn {
+	position: fixed;
+	display: none;
+	text-decoration: none;
+	bottom: 10px;
+	right: 10px;
+	width: 60px;
+	height: 60px;
+	background-color: #000;
+	color: #fff;
+	border-radius: 50%;
+	z-index: 1000;
+	font-size: 2.5rem;
+	opacity: .5;
+	transition: opacity .5s;
+	&:hover {
+		opacity: 1;
+	}
+	i {
+		position: absolute;
+		left: .3em;
+		top: .2em;
+	}
+}
 .cookie-agreement {
 	position: sticky;
 	bottom: 0;
