--- a/.preprocessors/.less/css/elf_galery.less
+++ b/.preprocessors/.less/css/elf_galery.less
@@ -26,11 +26,12 @@
 		color: #fff;
 		background-color: #000;
 		width: 80px;
-		padding-top: 15px;
-		height: 65px;
+		height: 80px;
 		border-radius: 50%;
 		font-size: 50px;
-		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		opacity: .3;
 		top: calc(50% - 40px);
 		z-index: 2;
