--- a/css/elf.css
+++ b/css/elf.css
@@ -1,3 +1,8 @@
+/*
+@m-res: ~"(max-width: "(@large-resolution - 1)~") and (min-width: @{middle-resolution})";
+@mm-res: ~"(max-width: "(@middle-resolution - 1)~") and (min-width: @{small-resolution})";
+@s-res: ~"(max-width: "(@small-resolution - 1)~")";
+*/
 * {
   box-sizing: border-box;
 }
@@ -7,7 +12,7 @@ body {
   padding: 0;
   margin: 0;
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   body {
     min-height: 800px;
   }
@@ -15,12 +20,12 @@ body {
     display: none !important;
   }
 }
-@media (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   body .hide-in-m {
     display: none !important;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   body .hide-in-s {
     display: none !important;
   }
@@ -32,7 +37,7 @@ textarea,
 a {
   font-family: Tahoma, Arial, Verdana;
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   body,
   input,
   select,
@@ -41,7 +46,7 @@ a {
     font-size: 15px;
   }
 }
-@media (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   body,
   input,
   select,
@@ -50,7 +55,7 @@ a {
     font-size: 16px;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   body,
   input,
   select,
@@ -98,6 +103,46 @@ a:hover {
   font-size: 70px;
   color: #777;
 }
+#elf-debug-info {
+  display: block;
+  z-index: 1000;
+  position: fixed;
+  left: 5px;
+  top: 5px;
+  padding: 1em;
+  background-color: #fff;
+  color: #800;
+  text-align: center;
+  border: 2px solid #800;
+  transition: opacity 0.5s;
+}
+#elf-debug-info:hover {
+  opacity: 0.2;
+}
+#elf-scroll-top-btn {
+  position: fixed;
+  display: none;
+  text-decoration: none;
+  bottom: 10px;
+  right: 10px;
+  width: 60px;
+  height: 60px;
+  background-color: #000;
+  color: #fff;
+  border-radius: 50%;
+  z-index: 1000;
+  font-size: 2.5rem;
+  opacity: 0.5;
+  transition: opacity 0.5s;
+}
+#elf-scroll-top-btn:hover {
+  opacity: 1;
+}
+#elf-scroll-top-btn i {
+  position: absolute;
+  left: 0.3em;
+  top: 0.2em;
+}
 .cookie-agreement {
   position: sticky;
   bottom: 0;
@@ -110,7 +155,7 @@ a:hover {
   font-size: 1.5rem;
   z-index: 99;
 }
-@media (max-width:  767px ), (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 730px) and (min-width: 430px), (max-width: 1255px) and (min-width: 980px) {
   .cookie-agreement {
     font-size: 0.75rem;
     padding: 1.5em;
@@ -123,7 +168,7 @@ a:hover {
   font-size: 1.5rem;
   color: #fff;
 }
-@media (max-width:  767px ), (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 730px) and (min-width: 430px), (max-width: 1255px) and (min-width: 980px) {
   .cookie-agreement a {
     font-size: 0.75rem;
   }
@@ -190,7 +235,7 @@ table th {
   border: 1px solid #eee;
   border-radius: 25px;
 }
-@media (max-width:  1023px ) and (min-width: 768px), (max-width:  767px ) {
+@media (max-width: 1255px) and (min-width: 980px), (max-width: 730px) and (min-width: 430px) {
   .elf-page-not-found {
     width: 96%;
   }
@@ -236,13 +281,13 @@ div.dialog {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
 }
-@media (max-width:  1023px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   div.dialog {
     width: 96%;
     left: 2%;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   div.dialog {
     width: 98%;
     left: 1%;
@@ -451,14 +496,14 @@ div.system-baloon {
   z-index: 300;
   word-break: break-all;
 }
-@media (max-width:  1023px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   div.system-baloon {
     margin-left: -150px;
     width: 300px;
     font-size: 14px;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   div.system-baloon {
     margin-left: 0;
     width: 90%;
@@ -946,19 +991,19 @@ div.slider-frm form {
   z-index: 200;
   color: #000;
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   .auth-dialog {
     width: 600px;
     left: calc(50% - 300px);
   }
 }
-@media (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   .auth-dialog {
     width: 50%;
     left: 25%;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .auth-dialog {
     width: 96%;
     left: 2%;
@@ -1056,13 +1101,13 @@ div.slider-frm form {
 .wide-dialog {
   margin-bottom: 30px;
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   .wide-dialog {
     width: 90%;
     left: 5%;
   }
 }
-@media (max-width: 1089px) {
+@media (max-width: 1254px) {
   .wide-dialog {
     width: 96%;
     left: 2%;
