--- a/css/elf_galery.css
+++ b/css/elf_galery.css
@@ -1,3 +1,8 @@
+/*
+@m-res: ~"(max-width: "(@large-resolution - 1)~") and (min-width: @{middle-resolution})";
+@mm-res: ~"(max-width: "(@middle-resolution - 1)~") and (min-width: @{small-resolution})";
+@s-res: ~"(max-width: "(@small-resolution - 1)~")";
+*/
 .elf-galery-container {
   position: relative;
   width: 1800px;
@@ -20,11 +25,12 @@
   color: #fff;
   background-color: #000;
   width: 80px;
-  padding-top: 15px;
-  height: 65px;
+  height: 80px;
   border-radius: 50%;
   font-size: 50px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   opacity: 0.3;
   top: calc(50% - 40px);
   z-index: 2;
