--- a/.preprocessors/.less/css/elf.less
+++ b/.preprocessors/.less/css/elf.less
@@ -233,21 +233,27 @@ div.dialog {
 	background:transparent;
 	box-shadow:0 0 10px rgba(0,0,0,0.5);
 	.border-radius-decors(10px);
-	div.top {
+	.top {
 		background:@app-color;
 		.border-radius-decors(10px, top, right);
 		.border-radius-decors(10px, top, left);
 		padding:10px 20px;
 		color:#fff;
 		width: 100%;
+		position: relative;
 	}
-	div.text {
+	.text {
 		background:#fff;
 		.border-radius-decors(10px, bottom, right);
 		.border-radius-decors(10px, bottom, left);
 		padding:20px 20px 10px;
 		color:#000;
 		width: 100%;
+	}
+	i.dialog-close-btn {
+		position: absolute;
+		right: 12px;
+		top: 12px;
 	}
 	&-static {
 		position: fixed;
@@ -259,7 +265,19 @@ div.dialog {
 			border-radius: 0;
 		}
 	}
+	&-wide {
+		margin-bottom: 30px;
+		@media @l-res {
+			width: 90%;
+			left: 5%;
+		}
+		@media (max-width: (@large-resolution - 1)) {
+			width: 96%;
+			left: 2%;
+		}
+	}
 }
+
 
 /* ========= INPUT, SELECT, TEXTAREA styles ======= */
 textarea {
@@ -1016,17 +1034,6 @@ div.slider-frm {
 		a {
 			font-size: 14px;
 		}
-	}
-}
-.wide-dialog {
-	margin-bottom: 30px;
-	@media @l-res {
-		width: 90%;
-		left: 5%;
-	}
-	@media (max-width: (@large-resolution - 1)) {
-		width: 96%;
-		left: 2%;
 	}
 }
 
