--- a/.preprocessors/.less/css/elf.less
+++ b/.preprocessors/.less/css/elf.less
@@ -45,6 +45,9 @@ a {
 		color: @app-color-light;
 	}
 }
+li {
+	font-size: 1.2em;
+}
 #modal {
 	z-index:100;
 	position:fixed;
@@ -223,7 +226,7 @@ div.dialog {
 		width: 96%;
 		left: 2%;
 	}
-	@media @s-res {
+	@media @s-res,@ss-res {
 		width: 98%;
 		left: 1%;
 	}
@@ -231,6 +234,7 @@ div.dialog {
 	z-index:200;
 	color:#fff;
 	background:transparent;
+	overflow: hidden;
 	box-shadow:0 0 10px rgba(0,0,0,0.5);
 	.border-radius-decors(10px);
 	.top {
@@ -249,6 +253,8 @@ div.dialog {
 		padding:20px 20px 10px;
 		color:#000;
 		width: 100%;
+		position: relative;
+		overflow-y: auto;
 	}
 	i.dialog-close-btn {
 		position: absolute;
@@ -276,6 +282,21 @@ div.dialog {
 			left: 2%;
 		}
 	}
+	&-top-ctrl-blck {
+		width: 100%;
+		position: sticky;
+		top: -20px;
+		z-index: 200;
+		text-align: right;
+		background-color: #fff;
+		padding: .75em 0;
+		i {
+			display: inline-block;
+			cursor: pointer;
+			font-size: 2em;
+			margin-left: .75em;
+		}
+	}
 }
 
 
@@ -283,7 +304,7 @@ div.dialog {
 textarea {
 	resize:none;
 }
-input,textarea,select {
+input,textarea,select,button {
 	padding:5px;
 	margin:5px 1%;
 	box-sizing: border-box;
@@ -495,7 +516,8 @@ table.edit {
 			background-color:#454f68;
 		}
 		img.icon {
-			max-width: 400px;
+			max-width: 200px;
+			max-height: 150px;
 		}
 	}
 }
@@ -703,6 +725,7 @@ label.elf-radio {
 /* ===== PAGINATION STYLES ======= */
 div.pagination {
 	padding:10px 0;
+	width: 100%;
 	&, a {
 		font-size:12px;
 	}
