--- a/css/elf_admin.css
+++ b/css/elf_admin.css
@@ -18,6 +18,13 @@ div.dialog a:hover {color:#539ad7;}
 #adm-mnu a.selected {background-color:#fff;color:#000;}
 div.adm-content {width:100%;background-color:#fff;padding:10px 10px 10px 30px;}
 div.adm-content,div.adm-content a {color:#000;}
+.adm-submnu-lnk {
+	display: inline-block;
+	margin-right: .5em;
+}
+.adm-submnu-lnk i {
+	font-size: 1.5em;
+}
 
 /* ===== ADMIN SUBMENUES STYLE ======= */
 div.admin-sub-mnu {position:relative;border-bottom:1px solid #292378;margin:0 0 10px;}
@@ -38,3 +45,16 @@ div.show-top-min {height:40px;}
 div.show-top-max {height:auto;}
 
 div.copyright {padding-top:20px;font-size:10px;}
+
+.elf-stat td {
+	padding: .5em;
+	border: 1px solid #000;
+}
+.elf-stat-date {
+	background-color: #aaa;
+	color: #fff;
+	font-weight: bold;
+}
+.elf-stat-data:hover td {
+	background-color: #fefe00;
+}
