--- a/css/elf_banners.css
+++ b/css/elf_banners.css
@@ -1,3 +1,8 @@
+/*
+@m-res: ~"(max-width: "(@large-resolution - 1)~") and (min-width: @{middle-resolution})";
+@mm-res: ~"(max-width: "(@middle-resolution - 1)~") and (min-width: @{small-resolution})";
+@s-res: ~"(max-width: "(@small-resolution - 1)~")";
+*/
 .elf-banners-container {
   width: 100%;
   height: 600px;
@@ -13,19 +18,19 @@
   height: 600px;
   text-align: center;
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   .elf-banners-container .elf-banners-item img {
     width: auto;
     height: 600px;
   }
 }
-@media (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-item img {
     width: auto;
     height: 600px;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-item img {
     width: auto;
     height: 310px;
@@ -42,28 +47,28 @@
   text-decoration: none;
   text-align: left;
 }
-@media (min-width: 1090px), (max-width:  1089px ) and (min-width: 768px) {
+@media (min-width: 1255px), (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-item .fc-banner-text {
     padding: 35px 50px;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-item .fc-banner-text {
     padding: 10px;
   }
 }
-@media (min-width: 1090px) {
+@media (min-width: 1255px) {
   .elf-banners-container .elf-banners-item .fc-banner-text {
     left: calc(50% - 644px);
   }
 }
-@media (max-width:  1089px ) and (min-width: 768px) {
+@media (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-item .fc-banner-text {
     width: 86%;
     left: 7%;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-item .fc-banner-text {
     top: 310px;
     width: 100%;
@@ -73,12 +78,12 @@
 .elf-banners-container .elf-banners-item .fc-banner-tlt {
   font-family: Montserrat-ExtraBold;
 }
-@media (min-width: 1090px), (max-width:  1089px ) and (min-width: 768px) {
+@media (min-width: 1255px), (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-item .fc-banner-tlt {
     font-size: 1.8em;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-item .fc-banner-tlt {
     font-size: 1.2em;
   }
@@ -92,12 +97,12 @@
   font-size: 1.2em;
   text-align: right;
 }
-@media (min-width: 1090px), (max-width:  1089px ) and (min-width: 768px) {
+@media (min-width: 1255px), (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-item .fc-banner-author {
     margin-top: 15px;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-item .fc-banner-author {
     margin-top: 10px;
     font-size: 1em;
@@ -110,12 +115,12 @@
   display: flex;
   justify-content: center;
 }
-@media (min-width: 1090px), (max-width:  1089px ) and (min-width: 768px) {
+@media (min-width: 1255px), (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-minidots-cont {
     bottom: 10%;
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-minidots-cont {
     bottom: auto;
     top: 290px;
@@ -149,12 +154,12 @@
   cursor: pointer;
   text-align: center;
 }
-@media (min-width: 1090px), (max-width:  1089px ) and (min-width: 768px) {
+@media (min-width: 1255px), (max-width: 1255px) and (min-width: 980px) {
   .elf-banners-container .elf-banners-navigate {
     top: calc(50% - 20px );
   }
 }
-@media (max-width:  767px ) {
+@media (max-width: 730px) and (min-width: 430px) {
   .elf-banners-container .elf-banners-navigate {
     top: 140px;
   }
